feat: implement plan options open/close functionality in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="index.js" defer></script>
     <title>coffeeroasters - Create plan</title>
   </head>
   <body>
@@ -96,17 +97,18 @@
       <section class="create-plan">
         <form class="create-plan__form" action="">
           <fieldset class="create-plan__fieldset">
-            <legend class="create-plan__legend--open">
+            <legend class="create-plan__legend">
               <h2 class="heading-lg create-plan__heading">
                 How do you drink your coffee?
               </h2>
               <img
+                id="open-options-1"
                 class="create-plan__btn"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div class="create-plan__options--open">
+            <div id="options-set-1" class="create-plan__options">
               <input
                 type="radio"
                 id="capsules"
@@ -156,17 +158,18 @@
             </div>
           </fieldset>
           <fieldset class="create-plan__fieldset">
-            <legend class="create-plan__legend--open">
+            <legend class="create-plan__legend">
               <h2 class="heading-lg create-plan__heading">
                 What type of coffee
               </h2>
               <img
+                id="open-options-2"
                 class="create-plan__btn"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div class="create-plan__options--open">
+            <div id="options-set-2" class="create-plan__options">
               <input
                 type="radio"
                 id="single-origin"
@@ -217,17 +220,18 @@
             </div>
           </fieldset>
           <fieldset class="create-plan__fieldset">
-            <legend class="create-plan__legend--open">
+            <legend class="create-plan__legend">
               <h2 class="heading-lg create-plan__heading">
                 How much would you like?
               </h2>
               <img
+                id="open-options-3"
                 class="create-plan__btn"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div class="create-plan__options--open">
+            <div id="options-set-3" class="create-plan__options">
               <input
                 type="radio"
                 id="250g"
@@ -273,17 +277,18 @@
             </div>
           </fieldset>
           <fieldset class="create-plan__fieldset">
-            <legend class="create-plan__legend--open">
+            <legend class="create-plan__legend">
               <h2 class="heading-lg create-plan__heading">
                 Want us to grind them?
               </h2>
               <img
+                id="open-options-4"
                 class="create-plan__btn"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div class="create-plan__options--open">
+            <div id="options-set-4" class="create-plan__options">
               <input
                 type="radio"
                 id="wholebean"
@@ -332,17 +337,18 @@
             </div>
           </fieldset>
           <fieldset class="create-plan__fieldset">
-            <legend class="create-plan__legend--open">
+            <legend class="create-plan__legend">
               <h2 class="heading-lg create-plan__heading">
                 How often should we deliver?
               </h2>
               <img
+                id="open-options-5"
                 class="create-plan__btn"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div class="create-plan__options--open">
+            <div id="options-set-5" class="create-plan__options">
               <input
                 type="radio"
                 id="every-week"
