feat: add markup for order summary and button:submit in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -396,6 +396,33 @@
               </label>
             </div>
           </fieldset>
+          <div class="create-plan__summary">
+            <p class="create-plan__summary-heading">Order summary</p>
+            <p class="create-plan__summary-text">
+              &ldquo;I drink my coffee using
+              <span class="create-plan__summary-option" id="summary-option-1"
+                >Capsules</span
+              >, with a
+              <span class="create-plan__summary-option" id="summary-option-2"
+                >_____</span
+              >
+              type of bean.
+              <span class="create-plan__summary-option" id="summary-option-3"
+                >_____</span
+              >
+              ground ala
+              <span class="create-plan__summary-option" id="summary-option-4"
+                >_____</span
+              >
+              , sent to me
+              <span class="create-plan__summary-option" id="summary-option-5"
+                >_____</span
+              >.&rdquo;
+            </p>
+          </div>
+          <div class="create-plan__submit">
+            <button type="submit">Create my plan!</button>
+          </div>
         </form>
       </section>
     </main>
