--- a/create-plan.html
+++ b/create-plan.html
@@ -397,11 +397,11 @@
             </div>
           </fieldset>
           <div class="create-plan__summary">
-            <p class="create-plan__summary-heading">Order summary</p>
-            <p class="create-plan__summary-text">
+            <p class="font-body create-plan__summary-heading">Order summary</p>
+            <p class="heading-sm create-plan__summary-text">
               &ldquo;I drink my coffee using
               <span class="create-plan__summary-option" id="summary-option-1"
-                >Capsules</span
+                >_____</span
               >, with a
               <span class="create-plan__summary-option" id="summary-option-2"
                 >_____</span
@@ -421,7 +421,7 @@
             </p>
           </div>
           <div class="create-plan__submit">
-            <button type="submit">Create my plan!</button>
+            <button class="btn btn-submit btn-disabled" type="submit">Create my plan!</button>
           </div>
         </form>
       </section>
