style: implement order summary auto-filling functionality when selecting order options in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -421,7 +421,13 @@
             </p>
           </div>
           <div class="create-plan__submit">
-            <button class="btn btn-submit btn-disabled" type="submit">Create my plan!</button>
+            <button
+              id="submit-btn"
+              class="btn btn-submit btn-disabled"
+              type="submit"
+            >
+              Create my plan!
+            </button>
           </div>
         </form>
       </section>
