feat: add markup for .create-plan__flow in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -95,6 +95,28 @@
         </div>
       </section>
       <section class="create-plan">
+        <div class="create-plan__flow">
+          <div class="create-plan__step">
+            <span class="create-plan__step-number">01</span>
+            <span class="create-plan__step-name">Preferences</span>
+          </div>
+          <div class="create-plan__step">
+            <span class="create-plan__step-number">02</span>
+            <span class="create-plan__step-name">Bean Type</span>
+          </div>
+          <div class="create-plan__step">
+            <span class="create-plan__step-number">03</span>
+            <span class="create-plan__step-name">Quantity</span>
+          </div>
+          <div class="create-plan__step">
+            <span class="create-plan__step-number">04</span>
+            <span class="create-plan__step-name">Grind Option</span>
+          </div>
+          <div class="create-plan__step">
+            <span class="create-plan__step-number">05</span>
+            <span class="create-plan__step-name">Deliveries</span>
+          </div>
+        </div>
         <form class="create-plan__form" action="">
           <fieldset class="create-plan__fieldset">
             <legend class="create-plan__legend">
