style: add styles for .create-plan__flow in section.create-plan in create-plan.html

--- a/create-plan.html
+++ b/create-plan.html
@@ -96,23 +96,33 @@
       </section>
       <section class="create-plan">
         <div class="create-plan__flow">
-          <div class="create-plan__step">
-            <span class="create-plan__step-number">01</span>
-            <span class="create-plan__step-name">Preferences</span>
+          <div class="heading-sm create-plan__step">
+            <span
+              class="create-plan__step-number create-plan__step-number-active"
+              >01</span
+            >
+            <span class="create-plan__step-name create-plan__step-name-active"
+              >Preferences</span
+            >
           </div>
-          <div class="create-plan__step">
+          <div class="heading-sm create-plan__step">
             <span class="create-plan__step-number">02</span>
             <span class="create-plan__step-name">Bean Type</span>
           </div>
-          <div class="create-plan__step">
+          <div class="heading-sm create-plan__step">
             <span class="create-plan__step-number">03</span>
             <span class="create-plan__step-name">Quantity</span>
           </div>
-          <div class="create-plan__step">
-            <span class="create-plan__step-number">04</span>
-            <span class="create-plan__step-name">Grind Option</span>
+          <div class="heading-sm create-plan__step">
+            <span
+              class="create-plan__step-number create-plan__step-number-disabled"
+              >04</span
+            >
+            <span class="create-plan__step-name create-plan__step-name-disabled"
+              >Grind Option</span
+            >
           </div>
-          <div class="create-plan__step">
+          <div class="heading-sm create-plan__step">
             <span class="create-plan__step-number">05</span>
             <span class="create-plan__step-name">Deliveries</span>
           </div>
@@ -125,12 +135,15 @@
               </h2>
               <img
                 id="open-options-1"
-                class="create-plan__btn"
+                class="create-plan__btn create-plan__btn-opened-options"
                 src="assets/plan/desktop/icon-arrow.svg"
                 alt="Open options"
               />
             </legend>
-            <div id="options-set-1" class="create-plan__options">
+            <div
+              id="options-set-1"
+              class="create-plan__options create-plan__options-open"
+            >
               <input
                 type="radio"
                 id="capsules"
