feat: add markup & styles for media queries for .header component

--- a/about-us.html
+++ b/about-us.html
@@ -42,6 +42,11 @@
             >
           </li>
         </ul>
+        <div class="header__burger-nav">
+          <div class="header__burger-bar"></div>
+          <div class="header__burger-bar"></div>
+          <div class="header__burger-bar"></div>
+        </div>
       </nav>
     </header>
     <main class="main-about">
