--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>coffeeroasters - Great coffee made simple</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header"> 
       <img
         src="assets/shared/desktop/logo.svg"
         alt="Coffeeroasters' logo"
@@ -55,7 +55,7 @@
           <h1 class="heading-xl hero__heading">Great coffee made simple.</h1>
           <p class="font-body hero__subheading">
             Start your mornings with the world's best coffees. Try our expertly
-            curated artisan coffees from our best roasters <br />
+            curated artisan coffees from our best roasters
             delivered directly to your door, at your schedule.
           </p>
           <a class="btn hero__btn" href="/create-plan.html">Create your plan</a>
