style: add styles for media queries <=768px & <=1200px for section.collection in index.html

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
               class="card__img"
             />
             <div class="card__description">
-              <p class="heading-sm u-text-center card__heading">
+              <p class="heading-sm card__heading">
                 Gran Espresso
               </p>
-              <p class="font-body u-text-center">
+              <p class="font-body card__subheading">
                 Light and flavorful blend with cocoa and black pepper for an
                 intense experience
               </p>
@@ -89,8 +89,8 @@
               class="card__img"
             />
             <div class="card__description">
-              <p class="heading-sm u-text-center card__heading">Planalto</p>
-              <p class="font-body u-text-center">
+              <p class="heading-sm card__heading">Planalto</p>
+              <p class="font-body card__subheading">
                 Brazilian dark roast with rich and velvety body, and hints of
                 fruits and nuts.
               </p>
@@ -103,8 +103,8 @@
               class="card__img"
             />
             <div class="card__description">
-              <p class="heading-sm u-text-center card__heading">Piccollo</p>
-              <p class="font-body u-text-center">
+              <p class="heading-sm card__heading">Piccollo</p>
+              <p class="font-body card__subheading">
                 Mild and smooth blend featuring notes of toasted almond and
                 dried cherry.
               </p>
@@ -117,8 +117,8 @@
               class="card__img"
             />
             <div class="card__description">
-              <p class="heading-sm u-text-center card__heading">Danche</p>
-              <p class="font-body u-text-center">
+              <p class="heading-sm card__heading">Danche</p>
+              <p class="font-body card__subheading">
                 Ethiopian hand-harvested blend densely packed with vibrant fruit
                 notes.
               </p>
