style: add styles for media queries <=1200px for section.features in index.html

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
           <h2 class="heading-lg features__heading">Why choose us</h2>
           <p class="font-body features__subheading u-text-center">
             A large part of our role is choosing which particular coffees will
-            be featured <br />
-            in our range. This means working closely with the best coffee
+            be featured in our range. This means working closely with the best coffee
             growers to give you a more impactful experience on every level.
           </p>
           <div class="features__list">
