fix: fix styles for media queries <=1200px for section.features in index.html

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                 alt="Best Quality"
                 class="card__img features__img"
               />
-              <div class="card__description">
+              <div class="card__description features__card-description">
                 <p
-                  class="heading-sm u-text-center card__heading features__card-heading"
+                  class="heading-sm card__heading features__card-heading"
                 >
                   Best Quality
                 </p>
-                <p class="font-body u-text-center features__card-subheading">
+                <p class="font-body features__card-subheading">
                   Discover an endless variety of the world’s best artisan coffee
                   from each of our roasters.
                 </p>
@@ -159,7 +159,7 @@
                 alt="Exclusive benefits"
                 class="card__img features__img"
               />
-              <div class="card__description">
+              <div class="card__description features__card-description">
                 <p
                   class="heading-sm u-text-center card__heading features__card-heading"
                 >
@@ -177,7 +177,7 @@
                 alt="Free shipping"
                 class="card__img features__img"
               />
-              <div class="card__description">
+              <div class="card__description features__card-description">
                 <p
                   class="heading-sm u-text-center card__heading features__card-heading"
                 >
