style: add styles for media queries <=550px for section.features in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>coffeeroasters - Great coffee made simple</title>
   </head>
   <body>
-    <header class="header"> 
+    <header class="header">
       <img
         src="assets/shared/desktop/logo.svg"
         alt="Coffeeroasters' logo"
@@ -55,8 +55,8 @@
           <h1 class="heading-xl hero__heading">Great coffee made simple.</h1>
           <p class="font-body hero__subheading">
             Start your mornings with the world's best coffees. Try our expertly
-            curated artisan coffees from our best roasters
-            delivered directly to your door, at your schedule.
+            curated artisan coffees from our best roasters delivered directly to
+            your door, at your schedule.
           </p>
           <a class="btn hero__btn" href="/create-plan.html">Create your plan</a>
         </div>
@@ -73,9 +73,7 @@
               class="card__img"
             />
             <div class="card__description">
-              <p class="heading-sm card__heading">
-                Gran Espresso
-              </p>
+              <p class="heading-sm card__heading">Gran Espresso</p>
               <p class="font-body card__subheading">
                 Light and flavorful blend with cocoa and black pepper for an
                 intense experience
@@ -131,8 +129,9 @@
           <h2 class="heading-lg features__heading">Why choose us</h2>
           <p class="font-body features__subheading u-text-center">
             A large part of our role is choosing which particular coffees will
-            be featured in our range. This means working closely with the best coffee
-            growers to give you a more impactful experience on every level.
+            be featured in our range. This means working closely with the best
+            coffee growers to give you a more impactful experience on every
+            level.
           </p>
           <div class="features__list">
             <div class="card features__card">
@@ -142,9 +141,7 @@
                 class="card__img features__img"
               />
               <div class="card__description features__card-description">
-                <p
-                  class="heading-sm card__heading features__card-heading"
-                >
+                <p class="heading-sm card__heading features__card-heading">
                   Best Quality
                 </p>
                 <p class="font-body features__card-subheading">
@@ -160,12 +157,10 @@
                 class="card__img features__img"
               />
               <div class="card__description features__card-description">
-                <p
-                  class="heading-sm u-text-center card__heading features__card-heading"
-                >
+                <p class="heading-sm card__heading features__card-heading">
                   Exclusive benefits
                 </p>
-                <p class="font-body u-text-center features__card-subheading">
+                <p class="font-body features__card-subheading">
                   Special offers and swag when you subscribe, including 30% off
                   your first shipment.
                 </p>
@@ -178,12 +173,10 @@
                 class="card__img features__img"
               />
               <div class="card__description features__card-description">
-                <p
-                  class="heading-sm u-text-center card__heading features__card-heading"
-                >
+                <p class="heading-sm card__heading features__card-heading">
                   Free shipping
                 </p>
-                <p class="font-body u-text-center features__card-subheading">
+                <p class="font-body features__card-subheading">
                   We cover the cost and coffee is delivered fast. Peak
                   freshness: guaranteed.
                 </p>
@@ -280,20 +273,5 @@
         </a>
       </div>
     </footer>
-    <!-- CARD component -->
-    <!-- <div class="card">
-      <img
-        src="/assets/home/desktop/image-gran-espresso.png"
-        alt=""
-        class="card__img"
-      />
-      <div class="card__description">
-        <p class="heading-sm u-text-center card__heading">Gran Espresso</p>
-        <p class="font-body u-text-center">
-          Light and flavorful blend with cocoa and black pepper for an intense
-          experience
-        </p>
-      </div>
-    </div> -->
   </body>
 </html>
