style: add styles for media queries <=600px for section.workflow in index.html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
           </div>
         </div>
-        <a class="btn" href="/create-plan.html">Create your plan</a>
+        <a class="btn workflow__btn" href="/create-plan.html">Create your plan</a>
       </section>
     </main>
     <footer class="footer">
